# dockerfile-pcl

./: Dockerfile  README.md
share/: CMakeLists.txt  segmentation.cpp
